# Hybrid-Search-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  supervisord.conf  task-definition.json  web_scraping_code.ipynb
.github/workflows/: cicd.yaml
Chatbot-streamlit/: README.md  app.py  requirements.txt
Chatbot-streamlit/.ipynb_checkpoints/: app-checkpoint.py
Chatbot-streamlit/chat_history/: chat_history.csv
Chatbot-streamlit/src/: api.py
Chatbot-streamlit/src/.ipynb_checkpoints/: api-checkpoint.py  schema-checkpoint.py
Chatbot-streamlit/src/utils/: get_insert_mongo_data.py  mongo_init.py  utils.py
Chatbot-streamlit/src/utils/.ipynb_checkpoints/: get_insert_mongo_data-checkpoint.py  mongo_init-checkpoint.py
Milvus_features_pipeline/: output_websites_10.csv
Milvus_features_pipeline/.ipynb_checkpoints/: Milvus_Feature_Pipeline_Final-checkpoint.ipynb  output_websites-checkpoint.csv
Retriever_Pipeline/.ipynb_checkpoints/: Retriever_Pipeline-checkpoint.ipynb
chat_restapi/: Dockerfile  api.py  hybrid_rag-0.1.0-py3-none-any.whl  main.py  requirements.txt  router.py  schema.py
chat_restapi/router/: rag_router.py
chat_streamlit_app/: app.py  hybrid_rag-0.1.0-py3-none-any.whl
chat_streamlit_app/chat_history/: chat_history.csv
chat_streamlit_app/css/: style.css
examples/: custom_mlflow_asr_model_logging.py  custom_mlflow_rag_model_logging.py  get_started.py  hugging_face_asr_model_example.py  hybrid_rag-0.1.0-py3-none-any.whl  local_asr_model_example.py  rag_model_logging.py  separate_components_rag.py  summarisation_usecase.py
hybrid_rag/: README.md  __init__.py  api.py  router.py  test.py
hybrid_rag/src/: __init__.py  api.py  config.py  log_model.py  rag.py  summarizer.py
hybrid_rag/src/advance_rag/: README.md  __init__.py  hybrid_search.py  iterative_search.py  query_expander.py  reranker.py  self_query_retriever.py
hybrid_rag/src/custom_asr_mlflow/: README.md  __init__.py  log_model.py  predict.py
hybrid_rag/src/custom_mlflow/: README.md  __init__.py  predict.py
hybrid_rag/src/evaluate/: README.md  __init__.py  rag_evaluation.py
hybrid_rag/src/models/: README.md  __init__.py
hybrid_rag/src/models/asr_models/: hg_stt.py  local_stt.py
hybrid_rag/src/models/llm_model/: model.py
hybrid_rag/src/models/retriever_model/: models.py
hybrid_rag/src/moderation/: README.md  __init__.py  question_moderator.py
hybrid_rag/src/prompts/: __init__.py  followup_prompt.py  prompt.py  summarization_prompt.py
hybrid_rag/src/summarization/: README.md  __init__.py  map_reduce.py  meta_extractor_chain.py  retrieve_docs_filter.py
hybrid_rag/src/utils/: README.md  __init__.py  custom_utils.py  decrypt_utils.py  decrypter.py  followup_questions.py  formatter_utils.py  get_mongo_data.py  get_mongo_data_utils.py  logutils.py  mongo_init.py  rag_evaluation.py  utils.py
hybrid_rag/src/vectordb/: README.md  __init__.py  zillinz_milvus.py
notebooks/ingestion_pipeline/: Pyspark_Milvus_Feature_Pipeline.ipynb  Python_Feature_Pipeline.ipynb  test.ipynb
notebooks/research_notebooks/: Milvus_Feature_Pipeline_sample.ipynb
notebooks/retriever_pipeline/: Retriever_Pipeline.ipynb
tests/: test_evaluate.py  test_hybrid_search.py  test_llm_model.py  test_moderation.py  test_prompts.py  test_query_expander.py  test_reranker.py  test_retriever_model.py  test_self_query_retriever.py  test_vectordb.py
