[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hybrid-rag"
version = "0.1.0"
description = "A Hybrid-search RAG repository"
authors = ["Samiksha Kolhe <kolhesamiksha25@gmail.com>"]
repository = "https://github.com/kolhesamiksha/Hybrid-Search-RAG"
keywords = ["streamlit", "langchain", "openai", "rag", "python", "groq", "hybrid search"]

packages = [{ include = "hybrid_rag" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.41.1"
streamlit-chat = "^0.1.1"
streamlit-elements = "^0.1.0"
langchain-community = "^0.2.13"
langchain = "^0.2.12"
fastembed = "0.3.2"
onnxruntime = "1.17.0"
langchain-core = "^0.2.43"
langchain-openai = "^0.1.25"
langchain-groq = "^0.1.10"
openai = "^1.58.1"
tiktoken = "^0.8.0"
pymilvus = "^2.5.1"
faiss-cpu = "^1.9.0.post1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pycryptodome = "^3.21.0"
ragas = "^0.2.9"
datasets = "3.2.0"
flashrank = "^0.2.9"
PyGithub = "^2.5.0"
lark = "^1.2.2"
ipython = "^8.31.0"
pymongo = { version = "^3.11", extras = ["srv"] }
python-dotenv = "^1.0.1"
mlflow = "^2.19.0"
boto3 = "^1.35.96"
psutil = "^6.1.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.5.0"
flake8 = "^6.0.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.12"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.5"
types-toml = "^0.10.8.1"
types-pytz = "^2023.3.0.0"
types-chardet = "^5.0.4.6"
types-redis = "^4.3.21.6"
mypy-protobuf = "^3.0.0"

[tool.towncrier]
package = "hybrid-rag"
filename = "CHANGELOG.md"

[tool.coverage.run]
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ".*(tests|examples|docs).*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.20.0"
black = "^23.9b0"
coverage = "^7.2.0"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.ruff]
extend-ignore = ["*.ipynb"]

[tool.ruff.lint]
select = ["I", "T201"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 -vv"
markers = [
    "requires: mark tests as requiring a specific library",
    "scheduled: mark tests to run in scheduled testing",
    "compile: mark placeholder test used to compile integration tests without running them",
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples,templates,*.trig'
# Ignore latin etc
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
# whats is a typo but used frequently in queries so kept as is
# aapply - async apply
# unsecure - typo but part of API, decided to not bother for now
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate,aadd,symbl,precesses,accademia,nin,cann'
